# geminiplayground

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  code  main.py  pyproject.toml
.github/workflows/: main.yml  pre_release.yml  pull_request.yml  release.yml
examples/: caching.py  chat.py  chat_wit_your_code.py  chat_with_multiple_files.py  chat_with_your_audios.py  chat_with_your_data.py  chat_with_your_images.py  chat_with_your_pdf.py  chat_with_your_video.py  code  code_repo.py  delete_all_files.py  gemini_client_api.py  list_all_files.py  list_models.py  multimodal.py  output.txt  playground_api.py  rag.py  readme_example.py  stream.py  summarization.py  test_cache.py  test_stream.py
samples/: advance_tutorial.py  chat_wit_your_code.py  chat_with_your_data.py  chat_with_your_images.py  chat_with_your_video.py  chats.py  delete_all_files.py  gemini_client_api.py  list_all_files.py  multimodal.py  talk_wit_your_code.py  talk_with_your_data.py  talk_with_your_images.py  talk_with_your_video.py
src/geminiplayground/: __init__.py  catching.py  cli.py  gemini_client.py  git_repo_part.py  image_part.py  multi_modal_part.py  singleton.py  utils.py  video_part.py
src/geminiplayground/core/: __init__.py  gemini_client.py  gemini_playground.py
src/geminiplayground/parts/: __init__.py  audio_part.py  git_repo_part.py  image_part.py  multimodal_part.py  multimodal_part_factory.py  pdf_part.py  video_part.py
src/geminiplayground/parts/audio_part/: audio_part.py
src/geminiplayground/parts/git_repo/: git_repo_part.py
src/geminiplayground/parts/image_part/: image_part.py
src/geminiplayground/parts/pdf_part/: pdf_part.py
src/geminiplayground/parts/video_part/: video_part.py
src/geminiplayground/rag/: __init__.py  agentic_rag.py  agentic_routing_rag.py  agentic_tool_use.py  agentic_tool_use_rag.py  caching.py  lotr_rag.py  lotrrag.py  rag.py  routing_rag.py  scored_retriever.py  simple_rag.py  summarization_loader.py  summarization_rag.py
src/geminiplayground/schemas/: __init__.py  enums.py  extra_schemas.py  parts_schemas.py  request_schemas.py  response_schemas.py
src/geminiplayground/utils/: __init__.py  cacheable.py  file_utils.py  git_remote_progress.py  git_utils.py  image_utils.py  lib_utils.py  pdf_utils.py  prompts.py  utils.py  video_utils.py
src/geminiplayground/web/: api.py  app.py  ui.py  utils.py  web.py
src/geminiplayground/web/db/: base_crud.py  config.py  cruds.py  crus_tests.py  main.py  models.py  orm_session.py  orm_utils.py  session_manager.py
src/geminiplayground/web/static/: 404.html  files.html  index.html  index.txt  mydata.html  mydata.txt
src/geminiplayground/web/static/404/: index.html
src/geminiplayground/web/static/_next/static/9HETz6gon6m0di_LSHLuB/: _buildManifest.js
src/geminiplayground/web/static/_next/static/OdpacNPtn1Pb23bp3EA7p/: _buildManifest.js
src/geminiplayground/web/static/_next/static/chunks/: 0e5ce63c-5eb0f7f8a069dbdb.js  0e5ce63c-d98e027f230baa0a.js  129-8a0f6774cf9e7178.js  13b76428-1947e09b2321d766.js  13b76428-f9d057779b2e2eb8.js  145-50bf073b9d6d984c.js  217-b81d3627f67732c5.js  230-970f3bab9b4e3445.js  289-3fa043f7890ec379.js  317-d435dd5ce24fb58a.js  341-5df076bfc5e102f0.js  422-cf184d85bb691291.js  426-22762e125249d57e.js  460-b810c652d3e37a9c.js  462-53e842b5170edbe5.js  4bd1b696-cfc653232af21f4e.js  516-ac672228ac0d22d7.js  519-37bc8ca141492fc1.js  52-ef278658335477bb.js  571-b0ca63e9ad31ecdd.js  61-4712c7f739e3bea6.js  621-a0bc8f6401aaf336.js  63-8add8e8bcbd476ee.js  684-4dcef7963b51a8fd.js  69-1099035c2955f53d.js  69-a3fb3d8063d67a2f.js  736-b850e22bc99ce8b5.js  799-48357cac33cc3fed.js  835-0258acf8ef487619.js  905-05dbb60d3f865edd.js  96-5b16c3db6cb881d0.js  977-065a24f295116cc2.js  99-2fd33f8996afedf4.js  99-90442bc5df7bdbdb.js  fd9d1056-b5a0ad921e35f7da.js  framework-66dcb5289ae9d888.js  framework-b370f160bb96059c.js  main-85f3d6a795c709fe.js  main-9190b3bd392972d5.js  main-aa38d4ece678d841.js  (+8 more)
src/geminiplayground/web/static/_next/static/chunks/app/: _not-found-70068fcc064ad24d.js  layout-1247773c79e24657.js  layout-351f9ac965ece6ef.js  layout-3ccb9ad6e33bfbfb.js  layout-91035e32b5e197c6.js  layout-9d581b5d65467c22.js  layout-f47dadcb63847a4c.js  page-0d8cc8777539c370.js  (+9 more)
src/geminiplayground/web/static/_next/static/css/: 0cee60ded1fa27aa.css  17235a0da4ca24f3.css  462ee48558608c74.css  52bbfbacec6eea65.css  52e97d04dc8dd80f.css  98f62f8bbfe2e881.css  fb13855a6788de34.css
src/geminiplayground/web/static/mydata/: index.html  index.txt
src/geminiplayground/web/templates/: files.html
ui/: components.json  next.config.mjs  package-lock.json  package.json  page.backup.txt  postcss.config.js  tailwind.config.js
ui/public/: styles-copy.css
ui/src/app/: axios.js  globals.css  layout.js  page.js
ui/src/app/mydata/: CodeRepoForm.js  FileUploadForm.js  page.js
ui/src/components/ButtonGroup/: index.js
ui/src/components/Chat/: index.js
ui/src/components/Chat/ChatInput/: index.js  styles.css
ui/src/components/Chat/ChatInputBox/: index.js
ui/src/components/Chat/ChatMessagesBox/: index.js
ui/src/components/ChatSettings/: index.js
ui/src/components/CodeCopyButton/: index.js  styles.css
ui/src/components/ConfirmDialog/: index.js
ui/src/components/DataTable/: index.js
ui/src/components/Layouts/: DefaultLayout.js
ui/src/components/ModelsSelect/: index.js
ui/src/components/Spinner/: Spinner.js  styles.module.css
ui/src/contexts/WebSocketContext/: index.js
(+10 files in other folders)
