[tool.poetry]
name = "geminiplayground"
version = "0.8.0"
description = ""
authors = ["haruiz <henryruiz22@gmail.com>"]
readme = "README.md"
packages = [{ include = "geminiplayground", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
google-api-python-client = "^2.123.0"
pillow = "^10.3.0"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
tqdm = "^4.66.2"
pydantic = "^2.6.4"
rich = "^13.7.1"
validators = "^0.24.0"
alive-progress = "^3.1.5"
pygithub = "^2.3.0"
gitpython = "^3.1.42"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
typer = "^0.12.0"
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.29"
jinja2 = "^3.1.3"
more-itertools = "^10.2.0"
markdown = "^3.6"
pygments = "^2.17.2"
vertexai = "^1.46.0"
requests-toolbelt = "^1.0.0"
joblib = "^1.3.2"
diskcache = "^5.6.3"
pytest = "^8.1.1"
pydantic-settings = "^2.2.1"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"
gunicorn = "^22.0.0"
pypdf2 = "^3.0.1"
pymupdf = "^1.24.4"

[tool.poetry.scripts]
geminiplayground = "geminiplayground.cli:run"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
ruff = "^0.4.4"
mypy = "^1.10.0"

[tool.mypy]
exclude = ["build", "dist", "venv", ".venv", ".mypy_cache", ".pytest_cache", ".git", ".tox", ".eggs", "__pycache__"]
ignore_missing_imports = true

[tool.black]
line-length = 88
exclude = '/(\.git|\.venv|\.mypy_cache|\.pytest_cache|\.tox|\.eggs|__pycache__|build|dist)/'
target-version = ['py310']

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = "google"
exclude = '/(\.git|\.venv|\.mypy_cache|\.pytest_cache|\.tox|\.eggs|__pycache__|build|dist)/'

[tool.ruff.lint]
exclude = '/(\.git|\.venv|\.mypy_cache|\.pytest_cache|\.tox|\.eggs|__pycache__|build|dist)/'

# Skip unused variable rules (`F841`).
#extend-ignore = ["F401"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
