[tool.poetry]
name = "geminiplayground"
version = "0.11.0"
description = ""
authors = ["haruiz <henryruiz22@gmail.com>"]
readme = "README.md"
packages = [{ include = "geminiplayground", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
google-api-python-client = "^2.132.0"
pillow = "^10.3.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
tqdm = "^4.66.2"
pydantic = "^2.6.4"
rich = "^13.7.1"
alive-progress = "^3.1.5"
pygithub = "^2.3.0"
gitpython = "^3.1.42"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
typer = "^0.12.0"
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.29"
jinja2 = "^3.1.3"
more-itertools = "^10.2.0"
markdown = "^3.6"
pygments = "^2.17.2"
vertexai = "^1.46.0"
requests-toolbelt = "^1.0.0"
joblib = "^1.3.2"
diskcache = "^5.6.3"
pytest = "^8.1.1"
pydantic-settings = "^2.3.1"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"
gunicorn = "^22.0.0"
pypdf2 = "^3.0.1"
pymupdf = "^1.24.4"
arrow = "^1.3.0"
tenacity = "^8.3.0"
pandas = "^2.2.2"
validators = "0.28.3"
google-generativeai = "^0.5.4"
opencv-python = "^4.10.0.82"
tiktoken = "^0.7.0"
seaborn = "^0.13.2"
faiss-cpu = "^1.8.0"
yaspin = "^3.0.2"
python-slugify = "^8.0.4"

[tool.poetry.group.rag]
optional = true

[tool.poetry.group.rag.dependencies]
langchain-experimental = "^0.0.60"
unstructured = { extras = ["all-docs"], version = "^0.14.5" }
langchain-weaviate = "^0.0.2"
langgraph = "^0.0.65"
langchain-community = "^0.2.4"
langchainhub = "^0.1.17"
langchain-google-genai = "^1.0.6"

[tool.poetry.scripts]
geminiplayground = "geminiplayground.cli:run"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
ruff = "^0.4.4"
mypy = "^1.10.0"

[tool.black]
line-length = 88


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
